[tool.poetry]
name = "tutor"
version = "0.1.0"
description = "freelance tutoring to adjust to covid19"
authors = ["soulwa <sam.c.lyon@gmail.com>", "riyasharma <riyasharma262626@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-socketio = "^4.3.0"
pytz = "^2019.3"
psycopg2-binary = "^2.8.5"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
